--- a/public/useful-links/index.html
+++ b/public/useful-links/index.html
@@ -539,6 +539,7 @@
         <a href="/scoutmaster">Scoutmaster Blog</a>
         <a href="/spl-blog">SPL Blog</a>
         <a href="/useful-links">Useful Links</a>
+        <a href="https://youtube.com/">YouTube</a>
       </nav>
 
       <div id="auth-bar">
