--- a/public/useful-links/index.html
+++ b/public/useful-links/index.html
@@ -670,13 +670,9 @@
 
     // You can customize this list of suggested topics:
     const TOPIC_OPTIONS = [
+      "Scouting America Organizational Links",
       "Rank Advancement",
-      "Camping",
       "Merit Badges",
-      "Forms & Paperwork",
-      "Uniform & Gear",
-      "High Adventure",
-      "Leadership",
       "Other" // keep "Other" so custom-topic flow works
     ];
 
