--- a/public/useful-links/index.html
+++ b/public/useful-links/index.html
@@ -183,7 +183,7 @@
     }
 
     nav a {
-      color: var(--white);
+      color: #1f4e79;
       text-decoration: none;
       padding: 6px 10px;
       border-radius: var(--radius-sm);
