--- a/public/useful-links/index.html
+++ b/public/useful-links/index.html
@@ -190,6 +190,7 @@
       border: 1px solid rgba(255, 255, 255, 0.25);
       backdrop-filter: blur(4px);
       opacity: 0.9;
+      font-weight: bold;
     }
 
     nav a:hover {
