--- a/public/scoutmaster/index.html
+++ b/public/scoutmaster/index.html
@@ -193,13 +193,14 @@
     }
 
     nav a {
-      color: var(--white);
+      color: #1f4e79;
       text-decoration: none;
       padding: 6px 10px;
       border-radius: var(--radius-sm);
       border: 1px solid rgba(255, 255, 255, 0.25);
       backdrop-filter: blur(4px);
       opacity: 0.9;
+      font-weight: bold;
     }
 
     nav a:hover {
