--- a/public/useful-links/index.html
+++ b/public/useful-links/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Useful Links — Troop 248</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="/bsafavicon.ico" type="image/x-icon">
   <style>
     :root {
       --red: #b22222;
