--- a/public/login/index.html
+++ b/public/login/index.html
@@ -112,6 +112,14 @@
     .back-home:hover {
       text-decoration: underline;
     }
+
+    .error {
+      margin-top: 8px;
+      font-size: 12px;
+      color: #b91c1c;
+      text-align: center;
+      min-height: 16px;
+    }
   </style>
 </head>
 
@@ -137,6 +145,8 @@
       <button id="signup-btn">Sign Up</button>
     </div>
 
+    <div id="error-text" class="error"></div>
+
     <div class="note">
       New accounts are viewers. Admin access is assigned by troop leadership.
     </div>
@@ -149,8 +159,7 @@
     import {
       getAuth,
       signInWithEmailAndPassword,
-      createUserWithEmailAndPassword,
-      onAuthStateChanged
+      createUserWithEmailAndPassword
     } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
     const firebaseConfig = {
@@ -170,36 +179,43 @@
     const passwordInput = document.getElementById("password-input");
     const loginBtn = document.getElementById("login-btn");
     const signupBtn = document.getElementById("signup-btn");
+    const errorText = document.getElementById("error-text");
 
-    // If already logged in → send to homepage
-    onAuthStateChanged(auth, (user) => {
-      if (user) {
-        window.location.href = "/";
-      }
-    });
+    function showError(msg) {
+      console.error(msg);
+      errorText.textContent = msg;
+    }
 
     loginBtn.addEventListener("click", async () => {
+      errorText.textContent = "";
+      const email = emailInput.value.trim();
+      const pass = passwordInput.value.trim();
+      if (!email || !pass) {
+        showError("Please enter email and password.");
+        return;
+      }
       try {
-        await signInWithEmailAndPassword(
-          auth,
-          emailInput.value.trim(),
-          passwordInput.value.trim()
-        );
+        await signInWithEmailAndPassword(auth, email, pass);
+        window.location.href = "/";
       } catch (e) {
-        alert("Login failed: " + e.message);
+        showError(e.message);
       }
     });
 
     signupBtn.addEventListener("click", async () => {
+      errorText.textContent = "";
+      const email = emailInput.value.trim();
+      const pass = passwordInput.value.trim();
+      if (!email || !pass) {
+        showError("Please enter email and password.");
+        return;
+      }
       try {
-        await createUserWithEmailAndPassword(
-          auth,
-          emailInput.value.trim(),
-          passwordInput.value.trim()
-        );
+        await createUserWithEmailAndPassword(auth, email, pass);
         alert("Account created. You are a viewer by default.");
+        window.location.href = "/";
       } catch (e) {
-        alert("Signup failed: " + e.message);
+        showError(e.message);
       }
     });
   </script>
