--- a/public/useful-links/index.html
+++ b/public/useful-links/index.html
@@ -724,8 +724,11 @@
     return;
   }
 
-  // Logged in → continue normal page setup
+  // Logged in → continue with your normal setup
   currentUser = user;
+  currentIsAdmin = ADMIN_UIDS.includes(user.uid);
+  updateAdminUI(); // or whatever function you already had
+});
 
     // Login / signup / logout
     loginBtn.addEventListener("click", async () => {
