--- a/public/login/index.html
+++ b/public/login/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
+    .field input {
+  width: 85%;    
+  margin: 0 auto; 
+  display: block;
+}
     body {
       margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
