--- a/public/login/index.html
+++ b/public/login/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Login — Troop 248 Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="/bsafavicon.ico" type="image/x-icon">
 
   <style>
     .field input {
