--- a/public/login/index.html
+++ b/public/login/index.html
@@ -7,89 +7,152 @@
   <link rel="icon" href="/bsafavicon.ico" type="image/x-icon">
 
   <style>
+    .troop-home-link {
+  text-decoration: none;
+  color: inherit;
+  display: inline-flex;
+  align-items: center;
+}
+
+.troop-home-link:hover h2 {
+  opacity: 0.9;
+  text-decoration: underline;
+}
+    :root {
+      --red: #b22222;
+      --blue: #1f4e79;
+      --tan: #f4eee3;
+      --white: #ffffff;
+      --text-main: #1f2933;
+      --text-muted: #6b7280;
+      --radius-lg: 16px;
+      --radius-sm: 999px;
+      --shadow-soft: 0 10px 25px rgba(0, 0, 0, 0.06);
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        sans-serif;
       margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       background: #d2cab6;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      color: var(--text-main);
       min-height: 100vh;
     }
 
-    .login-card {
-      background: rgba(255,255,255,.95);
-      border-radius: 18px;
-      padding: 22px 18px 16px;
-      max-width: 400px;
+    /* ========= FULLSCREEN LOGIN OVERLAY ========= */
+    #auth-overlay {
+      position: fixed;
+      inset: 0;
+      display: none; /* shown by JS if NOT logged in */
+      align-items: center;
+      justify-content: center;
+      background: radial-gradient(circle at top, #ffffff 0, var(--tan) 70%);
+      z-index: 50;
+    }
+
+    .auth-card {
+      background: rgba(255, 255, 255, 0.96);
+      border-radius: 20px;
+      padding: 24px 22px 18px;
       width: 100%;
-      box-shadow: 0 10px 25px rgba(0,0,0,.08);
-      border: 1px solid rgba(148,163,184,.45);
+      max-width: 360px;
+      box-shadow: var(--shadow-soft);
+      border: 1px solid rgba(148, 163, 184, 0.5);
     }
 
-    .login-header {
+    .auth-card-header {
       text-align: center;
-      margin-bottom: 12px;
+      margin-bottom: 16px;
     }
 
-    .login-header h1 {
+    .auth-card-header h1 {
       margin: 0;
-      font-size: 19px;
+      font-size: 20px;
+      letter-spacing: 0.08em;
       text-transform: uppercase;
-      letter-spacing: .08em;
-      color: #1f4e79;
+      color: var(--blue);
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
     }
 
-    .login-header p {
+    .auth-card-header h1::before {
+      content: "★";
+      font-size: 18px;
+      color: var(--red);
+    }
+
+    .auth-card-header p {
       margin: 6px 0 0;
       font-size: 13px;
-      color: #6b7280;
+      color: var(--text-muted);
     }
 
-    .field {
+    .auth-fields {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
       margin-top: 10px;
     }
 
-    .field label {
-      display: block;
+    .auth-fields label {
       font-size: 12px;
-      margin-bottom: 3px;
-      color: #6b7280;
+      font-weight: 500;
+      color: var(--text-muted);
       text-transform: uppercase;
-      letter-spacing: .05em;
+      letter-spacing: 0.05em;
+      margin-bottom: 3px;
     }
 
-    .field input {
-      width: 85%;
-      margin: 0 auto;
+    .auth-fields input {
+      width: 100%;
       padding: 7px 10px;
-      border-radius: 999px;
+      font-size: 14px;
+      border-radius: var(--radius-sm);
       border: 1px solid #d1d5db;
       background: #f9fafb;
-      font-size: 14px;
     }
 
-    .field input:focus {
+    .auth-fields input:focus {
       outline: none;
-      border-color: #1f4e79;
-      box-shadow: 0 0 0 2px rgba(31,78,121,.18);
+      border-color: var(--blue);
+      box-shadow: 0 0 0 2px rgba(31, 78, 121, 0.18);
     }
 
-    .buttons {
+    .auth-buttons {
       display: flex;
       gap: 8px;
       margin-top: 12px;
     }
 
-    .buttons button {
+    .auth-buttons button {
       flex: 1;
       padding: 7px 0;
-      border-radius: 999px;
+      font-size: 14px;
+      border-radius: var(--radius-sm);
       border: none;
       cursor: pointer;
-      font-size: 14px;
       font-weight: 500;
-      color: white;
+      color: var(--white);
+    }
+
+    #login-btn {
+      background: var(--blue);
+    }
+
+    #signup-btn {
+      background: var(--red);
+    }
+
+    .auth-note {
+      margin-top: 10px;
+      font-size: 12px;
+      color: var(--text-muted);
+      text-align: center;
     }
 
     #login-btn { background: #1f4e79; }
