--- a/public/calendar/index.html
+++ b/public/calendar/index.html
@@ -606,7 +606,7 @@
     onAuthStateChanged(auth, (user) => {
   if (!user) {
     // Not logged in → send to login page
-    window.location.href = "/login/";
+    window.location.href = "/";
     return;
   }
 
