--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -614,7 +614,7 @@
     onAuthStateChanged(auth, (user) => {
   if (!user) {
     // Not logged in → send to login page
-    window.location.href = "/login/";
+    window.location.href = "/";
     return;
   }
 
