--- a/public/spl-blog/index.html
+++ b/public/spl-blog/index.html
@@ -600,7 +600,7 @@
     onAuthStateChanged(auth, (user) => {
   if (!user) {
     // Not logged in → send to login page
-    window.location.href = "/login/";
+    window.location.href = "/";
     return;
   }
 
