--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,12 @@
   font-weight: 600;
   letter-spacing: .04em;
 
-  color: #ffffff;
+  color: #000000;
 
   background: linear-gradient(
-    180deg,
+    120deg,
     #1f4e79 0%,
+    #ffffff 48%,
     #b22222 100%
   );
 
